# pdmodels

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  af2ig_env.yml  auto_graphpad.py  env_test.py  environment.yml  esmfold_env.yml  get_model_params.sh  model_utils.py  pdmodels_env.yml  pyproject.toml  sample_esmif.py  score_esm2.py  score_esmif.py  score_ligandmpnn.py  setup.sh  utils.py
.github/workflows/: ci.yml
assets/monomers/: monomers.fasta
assets/monomers/msas/: mgnify_hits.sto
assets/multimers/: multimers.fasta
assets/multimers/precalc/A/msas/: mgnify_hits.sto  (+1 more)
examples/: esm2.ipynb  esmfold.sh  esmif.ipynb  ligandmpnn.ipynb  mpnn.ipynb  revor.ipynb  sample_complex.sh  sample_mpnn.sh  score_complex.sh  score_wt.sh
examples/af2ig/: jackhmmer.sh  monomers.sh  multimers.sh  run_af2ig.sbatch
examples/af2ig/jackhmmer/: jackhmmer.sh  monomer.fasta
examples/af2ig/monomer/: monomers.sh  run_af2ig.sbatch
examples/af2ig/monomer/msas/: pdb_hits.hhr  small_bfd_hits.sto
examples/af2ig/multimer/: multimers.fasta  multimers.sh  run_af2ig.sbatch
examples/esmfold/: esmfold.sh  monomers.fasta  monomers.sh  multimers.sh
models/: __init__.py  af2ig.py  basemodels.py  esm2.py  esmfold.py  esmif.py  get_model_params.sh  globals.py  model_utils.py  mpnn.py  mpnn_batch.py  revor.py  run.py  sample_esmif.py  score.py  score_esm2.py  score_esmif.py  score_ligandmpnn.py  types.py  utils.py
notebooks/: esm2.ipynb  esmif.ipynb  ligandmpnn.ipynb  score_wt.sh  test.ipynb
pdmodels/: __init__.py  af2ig.py  basemodels.py  esm2.py  esmfold.py  esmif.py  mpnn.py  revor.py  utils.py
pdmodels/ligandmpnn/: __init__.py
scripts/: download_alphafold_weights.sh  download_ligand_mpnn_weights.sh  download_ligandmpnn_weights.sh
src/pdmodels/: __init__.py  __main__.py  af2ig.py  cli.py  esm2.py  esmfold.py  esmif.py  globals.py  mpnn.py  revor.py  run.py  types.py  utils.py
src/pdmodels/ligand_mpnn/: data_utils.py  run.py
src/pdmodels/ligandmpnn/: __init__.py  model_utils.py  run.py
(+2 files in other folders)
